# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: geometry.h  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h
src/application/: application.cpp  application.h
src/camera/: camera.cpp  camera.h
src/drawer/: drawer.cpp  drawer.h
src/include/: application.h  camera.h  except.h  obj_parser.h  object.h  primitive.h  renderer.h  screen.h  world.h
src/parsers/: cmd_parser.cpp  cmd_parser.h  file_reader.cpp  file_reader.h  obj_parser.cpp  obj_parser.h
src/renderer/: filled_renderer.cpp  renderer.cpp  renderer.h  wireframe_renderer.cpp
src/scene/: light.cpp  light.h  object.cpp  object.h  world.cpp  world.h
src/screen/: screen.cpp  screen.h
src/timer/: timer.cpp  timer.h
src/utils/: cmd_parser.cpp  color.cpp  color.h  except.cpp  except.h  linalg.h  obj_parser.cpp  obj_parser.h  primitive.h  timer.h  triangle.h
